5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1621_2925.log
== TEST (2019-04-01 19:21:36) 
-- CODE:
x=("horas:")
y=("dias")
quantidades(x**(y))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidades(x**(y))
NameError: name 'quantidades' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:21:44) 
-- CODE:
x=("horas:")
y=("dias")
quantidades=(x**(y))
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quantidades=(x**(y))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:22:13) 
-- CODE:
x=int(input("horas:")
y=int(input("dias:")
quantidades=(x**(y))
print()
-- ERROR:
File "XXXX", line 2
    y=int(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:22:24) 
-- CODE:
x=int(input("horas:")
y=int("dias:")
quantidades=(x**(y))
print()
-- ERROR:
File "XXXX", line 2
    y=int("dias:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:22:33) 
-- CODE:
x=int(input("horas:")
y=input("dias:")
quantidades=(x**(y))
print()
-- ERROR:
File "XXXX", line 2
    y=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:22:42) 
-- CODE:
x=int(input("horas:")
y=float("dias:")
quantidades=(x**(y))
print()
-- ERROR:
File "XXXX", line 2
    y=float("dias:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:23:34) 
-- CODE:
x=int(input("horas:")
y=float("dias:")
n=(x**(y))
print()
-- ERROR:
File "XXXX", line 2
    y=float("dias:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:23:48) 
-- CODE:
x=int(input("horas:")
y=float("dias:")
n=float(x**(y))
print()
-- ERROR:
File "XXXX", line 2
    y=float("dias:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:36:41) 
-- CODE:
n=int(input("numero da geracao atual:"))
print()
-- ERROR:
File "XXXX", line 2
    y=float("dias:")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:36:53) 
-- CODE:
n=int(input("numero da geracao atual:"))
print()
-- EXECUTION TIME:
0.206251
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:

-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:07) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float("horas:")
y=float("dias:")
quntidades=(x**y)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float("horas:")
ValueError: could not convert string to float: 'horas:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:27) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float("dias:")
quntidades=(x**y)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:52) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
quntidades=(x**y)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:40:11) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
quntidades=(x**(y))
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:40:38) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
quntidades=("x**(y)")
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:16) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
quntidades=(x**(y)+n)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:41:43) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
quntidades=(x**y+n)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:10) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
quntidades=(n**(x+y))
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:43:38) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=(n**(x+y))
print(bacterias,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:43:47) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=(n**(x+y))
print(bacterias,n)
-- EXECUTION TIME:
0.179776
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2925/main.py", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:43:55) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=(n**(x+y))
print(bacterias,y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:19) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=(x**y)
print(bacterias,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:33) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=(x**y)
print(bacterias//n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:51) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**y)
print(bacterias//n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:57) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**y)
print(bacterias//n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:14) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(bacterias//n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:45:20) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(bacterias//n)
-- EXECUTION TIME:
0.200083
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2925/main.py", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:29) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(bacterias%n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:45:36) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(bacterias%n)
-- EXECUTION TIME:
0.186288
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2925/main.py", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:46:53) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:46:59) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(n)
-- EXECUTION TIME:
0.141757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2925/main.py", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:02) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:47:14) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(n)
-- EXECUTION TIME:
0.171464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2925/main.py", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:24) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:47:46) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(n)
-- EXECUTION TIME:
0.146826
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2925/main.py", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:04:16) 
-- CODE:
n=int(input("numero da geracao atual:"))
x=float(input("horas:"))
y=float(input("dias:"))
bacterias=float(x**(y))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
